fixing spacing on mobile

--- a/quiz.css
+++ b/quiz.css
@@ -312,7 +312,7 @@ img{
     }
     
     #card{
-        font-size: 20px;
+        font-size: 18px;
     }
 
     #truefalse{
